solc_mutator_ossfuzz_seed_corpus/test_sol/test_b42751485a72521c1113911180ee2e6a7f8ce2cf4ca030e6e9f06e1515cc6fd7_0bd88b80e6814d6936a1c129e781aafe78b2fa18_sol.sol
==== Source:  ====

==== Source: su0.sol ====
contract C0 {
}
function f0(function () external i0,C0 i1)  returns(bool o0,bool o1,function () external o2)
{
  {

o0 = !((-35624191556908783501330301139929388064679 > 42241280734360216229819056072122247566786));
  }

}
function f1(int160 i0,bytes memory i1) 
{ }
pragma abicoder v1;
pragma solidity >= 0.0.0;
// ----
// TypeError 2271: (su0.sol:128-214): Operator > not compatible with types int_const -356...(34 digits omitted)...4679 and int_const 4224...(33 digits omitted)...6786
